Add preparation for composite components support