@@ -1,9 +1,9 @@
 package edu.kit.ipd.sdq.attacksurface.tests.attackhandlers;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
-import org.eclipse.emf.ecore.util.EcoreUtil;
 import org.junit.Assert;
 import org.junit.jupiter.api.Test;
 import org.palladiosimulator.pcm.confidentiality.attacker.analysis.common.data.DataHandlerAttacker;
@@ -12,29 +12,23 @@ import org.palladiosimulator.pcm.confidentiality.attackerSpecification.attackSpe
 import org.palladiosimulator.pcm.confidentiality.attackerSpecification.pcmIntegration.PcmIntegrationFactory;
 import org.palladiosimulator.pcm.confidentiality.attackerSpecification.pcmIntegration.SystemIntegration;
 import org.palladiosimulator.pcm.confidentiality.attackerSpecification.pcmIntegration.VulnerabilitySystemIntegration;
-import org.palladiosimulator.pcm.core.composition.AssemblyContext;
-import org.palladiosimulator.pcm.core.entity.Entity;
 import org.palladiosimulator.pcm.resourceenvironment.ResourceContainer;
 
 import de.uka.ipd.sdq.identifier.Identifier;
-import edu.kit.ipd.sdq.attacksurface.core.changepropagation.attackhandlers.ResourceContainerHandler;
-import edu.kit.ipd.sdq.attacksurface.core.changepropagation.attackhandlers.context.AssemblyContextContext;
 import edu.kit.ipd.sdq.attacksurface.core.changepropagation.attackhandlers.context.ResourceContainerContext;
 import edu.kit.ipd.sdq.attacksurface.core.changepropagation.attackhandlers.vulnerability.AssemblyContextVulnerability;
 import edu.kit.ipd.sdq.attacksurface.core.changepropagation.attackhandlers.vulnerability.ResourceContainerVulnerability;
-import edu.kit.ipd.sdq.attacksurface.graph.AttackGraph;
 import edu.kit.ipd.sdq.attacksurface.graph.AttackStatusNodeContent;
 import edu.kit.ipd.sdq.attacksurface.graph.PCMElementType;
-import edu.kit.ipd.sdq.kamp4attack.model.modificationmarks.KAMP4attackModificationmarks.CredentialChange;
 
 public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
     private static final String VULN_ID = "TestVulnerabilityId123456";
     private static final String CRED_ID  = "_fmYV4VWvEeyAu8-8Lz7_vA";
-    
+
     @Test
     public void attackResourceContainerVulnerabilitySelfAttackTest() {
         final var dataHandler = new DataHandlerAttacker(getChanges());
-        final var handler = new ResourceContainerVulnerability(this.getBlackboardWrapper(),
+        final var handler = new ResourceContainerVulnerability(getBlackboardWrapper(),
                 dataHandler, AttackVector.NETWORK, getAttackGraph());
         final var rootNode = getAttackGraph().getRootNodeContent();
         final var resource = getResourceContainer(
@@ -48,17 +42,17 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .toArray(String[]::new)[0]);
         Assert.assertTrue(getAttackGraph().getEdge(resourceNode, resourceNode).contains(VULN_ID));
     }
-    
+
     @Test
     public void attackResourceContainerVulnerabilityAttackViaUncompromisedTest() {
         final var dataHandler = new DataHandlerAttacker(getChanges());
-        final var handler = new ResourceContainerVulnerability(this.getBlackboardWrapper(),
+        final var handler = new ResourceContainerVulnerability(getBlackboardWrapper(),
                 dataHandler, AttackVector.NETWORK, getAttackGraph());
         final var rootNode = getAttackGraph().getRootNodeContent();
         final var resource = getResourceContainer(
                 rootNode.getContainedElementAsPCMElement().getAssemblycontext());
         final var resourceNode = getAttackGraph().addOrFindChild(rootNode, new AttackStatusNodeContent(resource));
-        
+
         final var attackerResource = getConnectedResourceContainers(resource)
                 .stream()
                 .filter(r -> r.getEntityName().contains("P"))
@@ -69,7 +63,7 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
         Assert.assertFalse(attackerNode.isCompromised());
         Assert.assertTrue(getAttackGraph().getCompromisationCauseIds(attackerNode).isEmpty());
         Assert.assertNull(getAttackGraph().getEdge(attackerNode, attackerNode));
-        
+
         // attack and compromise container node
         handler.attackResourceContainer(Arrays.asList(resource), getChanges(), attackerResource);
         Assert.assertTrue(resourceNode.isCompromised());
@@ -79,14 +73,15 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .toArray(String[]::new)[0]);
         Assert.assertTrue(getAttackGraph().getEdge(resourceNode, attackerNode).contains(VULN_ID));
     }
-    
+
     @Test
     public void attackResourceContainerVulnerabilityCompromisedAttackTest() {
         final var dataHandler = new DataHandlerAttacker(getChanges());
-        final var handler = new ResourceContainerVulnerability(this.getBlackboardWrapper(),
+        final var handler = new ResourceContainerVulnerability(getBlackboardWrapper(),
                 dataHandler, AttackVector.NETWORK, getAttackGraph());
         final var rootNode = getAttackGraph().getRootNodeContent();
-        final var resource = getResourceContainer(rootNode.getContainedElementAsPCMElement().getAssemblycontext());
+        final var resource = getResourceContainer(
+                rootNode.getContainedElementAsPCMElement().getAssemblycontext());
         final var resourceNode = getAttackGraph().addOrFindChild(rootNode, new AttackStatusNodeContent(resource));
 
         final var attackerResource = getConnectedResourceContainers(resource)
@@ -96,7 +91,7 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
         final var vulnList = getBlackboardWrapper().getVulnerabilitySpecification().getVulnerabilities();
         vulnList.add(createVulnerabilitySystemIntegration(attackerResource));
         final var attackerNode = getAttackGraph().addOrFindChild(resourceNode, new AttackStatusNodeContent(attackerResource));
-        
+
         // attack and compromise attackerNode
         handler.attackResourceContainer(Arrays.asList(attackerResource), getChanges(), attackerResource);
         Assert.assertTrue(attackerNode.isCompromised());
@@ -105,7 +100,7 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .stream().map(Identifier::getId)
                 .toArray(String[]::new)[0]);
         Assert.assertTrue(getAttackGraph().getEdge(attackerNode, attackerNode).contains(VULN_ID));
-        
+
         // attack and compromise resource node
         handler.attackResourceContainer(Arrays.asList(resource), getChanges(), attackerResource);
         Assert.assertTrue(resourceNode.isCompromised());
@@ -114,11 +109,11 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .stream().map(Identifier::getId)
                 .toArray(String[]::new)[0]);
         Assert.assertTrue(getAttackGraph().getEdge(resourceNode, attackerNode).contains(VULN_ID));
-        
-        final int size = vulnList.size();
+
+        final var size = vulnList.size();
         vulnList.remove(size - 1);
     }
-    
+
     private SystemIntegration createVulnerabilitySystemIntegration(final ResourceContainer resource) {
         final var sysInteg = PcmIntegrationFactory.eINSTANCE.createVulnerabilitySystemIntegration();
         sysInteg.setPcmelement(PCMElementType.typeOf(resource).toPCMElement(resource));
@@ -131,14 +126,14 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .stream()
                 .filter(s -> Objects.equals(s.getIdOfContent().getId(), VULN_ID))
                 .map(VulnerabilitySystemIntegration.class::cast)
-                .map(s -> s.getVulnerability())
+                .map(VulnerabilitySystemIntegration::getVulnerability)
                 .findFirst().orElse(null);
     }
 
     @Test
     public void attackResourceContainerVulnerabilityAttackViaUncompromisedAssemblyContextTest() {
         final var dataHandler = new DataHandlerAttacker(getChanges());
-        final var assemblyHandler = new AssemblyContextVulnerability(this.getBlackboardWrapper(), 
+        final var assemblyHandler = new AssemblyContextVulnerability(getBlackboardWrapper(),
                 dataHandler, AttackVector.NETWORK, getAttackGraph());
         final var rootNode = getAttackGraph().getRootNodeContent();
         final var criticalResource = getResourceContainer(
@@ -152,13 +147,14 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .findFirst().orElse(null);
         final var attackerNode = getAttackGraph().addOrFindChild(criticalNode, new AttackStatusNodeContent(attackerComponent));
 
-        assemblyHandler.attackAssemblyContext(Arrays.asList(attackerComponent), getChanges(), attackerComponent, false);
+        assemblyHandler.attackAssemblyContext(Arrays.asList(List.of(attackerComponent)), getChanges(),
+                attackerComponent, false);
         Assert.assertFalse(attackerNode.isCompromised());
         Assert.assertTrue(getAttackGraph().getCompromisationCauseIds(attackerNode).isEmpty());
         Assert.assertNull(getAttackGraph().getEdge(attackerNode, attackerNode));
-        
+
         // attack and compromise critical container
-        final var handler = new ResourceContainerVulnerability(this.getBlackboardWrapper(),
+        final var handler = new ResourceContainerVulnerability(getBlackboardWrapper(),
                 dataHandler, AttackVector.NETWORK, getAttackGraph());
         handler.attackResourceContainer(Arrays.asList(criticalResource), getChanges(), attackerComponent);
         Assert.assertTrue(criticalNode.isCompromised());
@@ -168,11 +164,11 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .toArray(String[]::new)[0]);
         Assert.assertTrue(getAttackGraph().getEdge(criticalNode, attackerNode).contains(VULN_ID));
     }
-    
+
     @Test
     public void attackResourceContainerVulnerabilityAttackViaCompromisedAssemblyTest() {
         final var dataHandler = new DataHandlerAttacker(getChanges());
-        final var assemblyHandler = new AssemblyContextVulnerability(this.getBlackboardWrapper(), 
+        final var assemblyHandler = new AssemblyContextVulnerability(getBlackboardWrapper(),
                 dataHandler, AttackVector.NETWORK, getAttackGraph());
         final var rootNode = getAttackGraph().getRootNodeContent();
         final var criticalResource = getResourceContainer(
@@ -185,17 +181,18 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .filter(e -> e.getEntityName().contains("R.1.1"))
                 .findFirst().orElse(null);
         final var attackerNode = getAttackGraph().addOrFindChild(criticalNode, new AttackStatusNodeContent(attackerComponent));
-        
+
         // attack and compromise attackerNode
-        assemblyHandler.attackAssemblyContext(Arrays.asList(attackerComponent), getChanges(), attackerComponent, false);
+        assemblyHandler.attackAssemblyContext(Arrays.asList(List.of(attackerComponent)), getChanges(),
+                attackerComponent, false);
         Assert.assertTrue(attackerNode.isCompromised());
         Assert.assertFalse(getAttackGraph().getCompromisationCauseIds(attackerNode).isEmpty());
         Assert.assertEquals(VULN_ID, getAttackGraph().getCompromisationCauseIds(attackerNode)
                 .stream().map(Identifier::getId)
                 .toArray(String[]::new)[0]);
         Assert.assertTrue(getAttackGraph().getEdge(attackerNode, attackerNode).contains(VULN_ID));
-        
-        final var handler = new ResourceContainerVulnerability(this.getBlackboardWrapper(),
+
+        final var handler = new ResourceContainerVulnerability(getBlackboardWrapper(),
                 dataHandler, AttackVector.NETWORK, getAttackGraph());
         // attack and compromise root node
         handler.attackResourceContainer(Arrays.asList(criticalResource), getChanges(), attackerComponent);
@@ -206,22 +203,22 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .toArray(String[]::new)[0]);
         Assert.assertTrue(getAttackGraph().getEdge(criticalNode, attackerNode).contains(VULN_ID));
     }
-    
+
     // context tests
     @Test
     public void attackResourceContainerContextSelfAttackTest() {
         final var dataHandler = new DataHandlerAttacker(getChanges());
         final var rootNode = getAttackGraph().getRootNodeContent();
         final var criticalComponent = rootNode.getContainedElementAsPCMElement().getAssemblycontext();
-        final ResourceContainer attackerResource = getResourceContainer(criticalComponent);
+        final var attackerResource = getResourceContainer(criticalComponent);
 
         final var attackerNode = getAttackGraph().addOrFindChild(rootNode, new AttackStatusNodeContent(attackerResource));
         addRootAccess();
-        
+
         // attack and compromise attackerNode
-        final var resourceHandler = new ResourceContainerContext(this.getBlackboardWrapper(),
+        final var resourceHandler = new ResourceContainerContext(getBlackboardWrapper(),
                 dataHandler, getAttackGraph());
-        
+
         resourceHandler.attackResourceContainer(Arrays.asList(attackerResource), getChanges(), attackerResource);
         Assert.assertTrue(attackerNode.isCompromised());
         Assert.assertFalse(getAttackGraph().getCompromisationCauseIds(attackerNode).isEmpty());
@@ -230,29 +227,29 @@ public class ResourceContainerHandlerTest extends AbstractAttackHandlerTest {
                 .toArray(String[]::new)[0]);
         Assert.assertTrue(getAttackGraph().getEdge(attackerNode, attackerNode).contains(CRED_ID));
     }
-    
+
     @Test
     public void attackResourceContainerContextAttackViaUncompromisedTest() {
         final var dataHandler = new DataHandlerAttacker(getChanges());
-        final var handler = new ResourceContainerContext(this.getBlackboardWrapper(),
+        final var handler = new ResourceContainerContext(getBlackboardWrapper(),
                 dataHandler, getAttackGraph());
         final var rootNode = getAttackGraph().getRootNodeContent();
         final var resource = getResourceContainer(
                 rootNode.getContainedElementAsPCMElement().getAssemblycontext());
         final var resourceNode = getAttackGraph().addOrFindChild(rootNode, new AttackStatusNodeContent(resource));
-        
+
         final var attackerResource = getConnectedResourceContainers(resource)
                 .stream()
                 .filter(r -> r.getEntityName().contains("P"))
                 .findFirst().orElse(null);
         final var attackerNode = getAttackGraph().addOrFindChild(resourceNode, new AttackStatusNodeContent(attackerResource));
         addRootAccess();
-        
+
         handler.attackResourceContainer(Arrays.asList(attackerResource), getChanges(), attackerResource);
         Assert.assertFalse(attackerNode.isCompromised());
         Assert.assertTrue(getAttackGraph().getCompromisationCauseIds(attackerNode).isEmpty());
         Assert.assertNull(getAttackGraph().getEdge(attackerNode, attackerNode));
-        
+
         // attack and compromise container node
         handler.attackResourceContainer(Arrays.asList(resource), getChanges(), attackerResource);
         Assert.assertTrue(resourceNode.isCompromised());
